Added original lookup plugin author

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -17,6 +17,7 @@ readme: README.md
 # @nicks:irc/im.site#channel'
 authors:
 - Sebastian Kutter <sebastian@skutter.de>
+- Matt Stofko <matt@mjslabs.com>
 
 
 ### OPTIONAL but strongly recommended
